traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (!(estFaceMur())) return(false);
  ^Snake:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()== Direction.Est){
  ^Snake:16: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()== Direction.Ouest){
  ^